<resources>
    <string name="app_name">WhatsAppClone</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="signup_with_phone">Sign Up with Phone</string>
    <string name="sign_in">Sign In</string>
    <string name="group_chat">Group Chat</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message">Message</string>
    <string name="anytextfornow">AnyTextForNow</string>
    <string name="_12_45pm">12:45PM</string>
</resources>