<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    android:background="@color/black"
    android:gravity="center"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/drop_it_logo"

            ></ImageView>

        <EditText
            android:id="@+id/textEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="9dp"
            android:textColor="@color/purple"
            android:textColorHint="@color/chatbackground"></EditText>

        <EditText
            android:id="@+id/textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="9dp"
            android:textColor="@color/purple"
            android:textColorHint="@color/chatbackground"></EditText>

        <TextView
            android:id="@+id/textClickSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/reddish_peach"
            android:text="Click to Sign Up"
            android:layout_gravity="right"
            android:gravity="right"
            android:padding="5dp"
            android:textStyle="bold"
            ></TextView>

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/purple"
            android:padding="15dp"
            android:text="@string/sign_in"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAllCaps="false"></Button>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            />
        <TextView
            android:id="@+id/textSignupPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/signup_with_phone"
            android:layout_marginTop="15dp"
            android:textColor="@color/reddish_peach"
            android:textSize="19sp"
            />

    </LinearLayout>
</LinearLayout>